# market-basket-analysis

./: README.md  pyproject.toml
data/transformed/: grocery_items_per_transaction.csv
notebooks/: 01_data_analysis.ipynb  02_market_basket_analysis.ipynb
src/: __init__.py
