[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["fabiansum <fab.sumarna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"

[tool.poetry.group.dev.dependencies]
mlxtend = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
